mobile mute problem fixed

--- a/index.html
+++ b/index.html
@@ -493,6 +493,7 @@
             </div>
           </section>
           <section
+            data-state="vid1"
             data-background-video="https://deboxconsulting.github.io/marketing-portfolio/videos/Blisstree_June24_Millets_Promo_Sound.mp4"
             data-background-video-loop
           ></section>
@@ -580,6 +581,7 @@
             </div>
           </section>
           <section
+            data-state="vid2"
             data-background-video="https://deboxconsulting.github.io/marketing-portfolio/videos/fullscreen/Kumar's_Connecticut_Mar_TVSlider_OP.mp4"
             data-background-video-loop
           ></section>
@@ -624,6 +626,7 @@
             </div>
           </section>
           <section
+            data-state="vid3"
             data-background-video="https://deboxconsulting.github.io/marketing-portfolio/videos/fullscreen/LAB_TV_Slider_All_Stores.mp4"
             data-background-video-loop
           ></section>
@@ -668,6 +671,7 @@
             </div>
           </section>
           <section
+            data-state="vid4"
             data-background-video="https://deboxconsulting.github.io/marketing-portfolio/videos/fullscreen/BSLC_Cuisines_Promo.mp4"
             data-background-video-loop
           ></section>
@@ -712,6 +716,7 @@
             </div>
           </section>
           <section
+            data-state="vid5"
             data-background-video="https://deboxconsulting.github.io/marketing-portfolio/videos/fullscreen/Advik_LinkedIn_Cr_v5.mp4"
             data-background-video-loop
           ></section>
