--- a/index.html
+++ b/index.html
@@ -263,6 +263,11 @@
             data-background-position="center"
           ></section>
           <section
+            data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/websites/Veruschka_Web.png"
+            data-background-size="contain"
+            data-background-position="center"
+          ></section>
+          <section
             data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/websites/Website_Mockup9.png"
             data-background-size="contain"
             data-background-position="center"
