--- a/index.html
+++ b/index.html
@@ -217,6 +217,62 @@
             data-background-position="center"
           ></section>
         </section>
+        <section id="27">
+          <section
+            data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/Debox_Deck_Presentation-27.jpg"
+            data-background-size="contain"
+            data-background-position="center"
+          ></section>
+          <section
+            data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/social_media/Social-Media-Creative11.gif"
+            data-background-size="contain"
+            data-background-position="center"
+          >
+            <div class="r-stretch">
+              <h4 class="slide-title-fullscreen">
+                Employer Branding / Internal Communications
+              </h4>
+            </div>
+          </section>
+          <section data-background-color="white">
+            <div
+              class="r-stretch"
+              style="
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                flex-direction: row;
+              "
+            >
+              <div>
+                <video loop controls>
+                  <source
+                    src="https://deboxconsulting.github.io/marketing-portfolio/videos/Scorpio_April_24_CR2.mp4"
+                    type="video/mp4"
+                  />
+                </video>
+              </div>
+              <div>
+                <video loop controls>
+                  <source
+                    src="https://deboxconsulting.github.io/marketing-portfolio/videos/Scorpio_May_22_CR1.mp4"
+                    type="video/mp4"
+                  />
+                </video>
+              </div>
+            </div>
+          </section>
+          <section
+            data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/social_media/Social-Media-Creative19.gif"
+            data-background-size="contain"
+            data-background-position="center"
+          ></section>
+          <section
+            data-state="vid6"
+            data-background-video="https://deboxconsulting.github.io/marketing-portfolio/videos/fullscreen/KhelGroup_CR_3_1.mp4"
+            data-background-video-loop
+          ></section>
+        </section>
         <section id="s8">
           <section
             data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/Debox_Deck_Presentation-08.jpg"
