--- a/index.html
+++ b/index.html
@@ -197,11 +197,6 @@
             data-background-position="center"
           ></section>
           <section
-            data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/social_media/Social-Media-Creative11.gif"
-            data-background-size="contain"
-            data-background-position="center"
-          ></section>
-          <section
             data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/social_media/Social-Media-Creative16.gif"
             data-background-size="contain"
             data-background-position="center"
@@ -864,6 +859,12 @@
             alt=""
           />
         </section>
+      </div>
+    </div>
+    <div class="instructions_container">
+      <div class="instructions">
+        <p>Click the down arrow to dive into the section</p>
+        <p>Click the side arrow to check out the next section</p>
       </div>
     </div>
     <div id="custom-controls">
