food photography changes

--- a/index.html
+++ b/index.html
@@ -784,7 +784,7 @@
             data-background-position="center"
           ></section>
           <section
-            data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/photography/Photography_1.jpg"
+            data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/photography/Photography_6.jpg"
             data-background-size="contain"
             data-background-position="center"
           >
@@ -792,31 +792,6 @@
               <h4 class="slide-title-fullscreen">Food Photography</h4>
             </div>
           </section>
-          <section
-            data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/photography/Photography_2.jpg"
-            data-background-size="contain"
-            data-background-position="center"
-          ></section>
-          <section
-            data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/photography/Photography_3.jpg"
-            data-background-size="contain"
-            data-background-position="center"
-          ></section>
-          <section
-            data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/photography/Photography_4.jpg"
-            data-background-size="contain"
-            data-background-position="center"
-          ></section>
-          <section
-            data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/photography/Photography_5.jpg"
-            data-background-size="contain"
-            data-background-position="center"
-          ></section>
-          <section
-            data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/photography/Photography_6.jpg"
-            data-background-size="contain"
-            data-background-position="center"
-          ></section>
           <section
             data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/photography/Photography_7.jpg"
             data-background-size="contain"
@@ -852,6 +827,31 @@
             data-background-size="contain"
             data-background-position="center"
           ></section>
+          <section
+            data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/photography/Photography_1.jpg"
+            data-background-size="contain"
+            data-background-position="center"
+          ></section>
+          <section
+            data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/photography/Photography_2.jpg"
+            data-background-size="contain"
+            data-background-position="center"
+          ></section>
+          <section
+            data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/photography/Photography_3.jpg"
+            data-background-size="contain"
+            data-background-position="center"
+          ></section>
+          <section
+            data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/photography/Photography_4.jpg"
+            data-background-size="contain"
+            data-background-position="center"
+          ></section>
+          <section
+            data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/photography/Photography_5.jpg"
+            data-background-size="contain"
+            data-background-position="center"
+          ></section>
         </section>
         <section id="s22">
           <img
@@ -863,8 +863,8 @@
     </div>
     <div class="instructions_container">
       <div class="instructions">
-        <p>Click the down arrow to dive into the section</p>
-        <p>Click the side arrow to check out the next section</p>
+        <p>Click the down arrow to dive into the section.</p>
+        <p>Click the side arrow to check out the next section.</p>
       </div>
     </div>
     <div id="custom-controls">
