--- a/index.html
+++ b/index.html
@@ -183,14 +183,14 @@
                         flex-direction: row;
                       ">
             <div>
-              <video loop controls>
+              <video style="width: 450px; height: 230px;" loop controls>
                 <source src="https://deboxconsulting.github.io/marketing-portfolio/videos/KhelGroup_CR_8.mp4"
                   type="video/mp4" />
               </video>
             </div>
             <div>
-              <video loop controls>
-                <source src="https://deboxconsulting.github.io/marketing-portfolio/videos/Scorpio_May_22_CR1.mp4"
+              <video style="width: 450px; height: 230px;" loop controls>
+                <source src="https://deboxconsulting.github.io/marketing-portfolio/videos/KhelGroup_CR_12.mp4"
                   type="video/mp4" />
               </video>
             </div>
@@ -240,6 +240,9 @@
           data-background-size="contain" data-background-position="center"></section>
         <section
           data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/websites/Website_Mockup10.png"
+          data-background-size="contain" data-background-position="center"></section>
+        <section
+          data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/websites/Websites_Chai Samosa.jpg"
           data-background-size="contain" data-background-position="center"></section>
       </section>
       <section id="s9">
@@ -310,6 +313,12 @@
         <section data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/print/Print_7.png">
         </section>
         <section data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/print/Print_5.png">
+        </section>
+        <section
+          data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/print/Print_Advik_bus.png">
+        </section>
+        <section
+          data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/print/Print_Sqorpio.png">
         </section>
       </section>
       <section id="s11">
@@ -444,9 +453,76 @@
             </video>
           </div>
         </section>
+        <section data-background-color="white">
+          <div class="videos-grid">
+            <video loop controls>
+              <source
+                src="https://deboxconsulting.github.io/marketing-portfolio/videos/BlissTree_Aug10_CorianderPowder_Creative_Sound.mp4"
+                type="video/mp4" />
+            </video>
+            <video loop controls>
+              <source
+                src="https://deboxconsulting.github.io/marketing-portfolio/videos/BlissTree_Aug11_BananaChips_Creative_Sound.mp4"
+                type="video/mp4" />
+            </video>
+            <video loop controls>
+              <source
+                src="https://deboxconsulting.github.io/marketing-portfolio/videos/BlissTree_HealthDrink_Creative_Sound.mp4"
+                type="video/mp4" />
+            </video>
+            <video loop controls>
+              <source
+                src="https://deboxconsulting.github.io/marketing-portfolio/videos/BlissTree_PearlMilletPorridge_Sound.mp4"
+                type="video/mp4" />
+            </video>
+            <video loop controls>
+              <source
+                src="https://deboxconsulting.github.io/marketing-portfolio/videos/BlissTree_Sep13_Halloween_Creative_Sound.mp4"
+                type="video/mp4" />
+            </video>
+            <video loop controls>
+              <source
+                src="https://deboxconsulting.github.io/marketing-portfolio/videos/BlissTreeNJ_Aug31_TraditionalRice_Promo.mp4"
+                type="video/mp4" />
+            </video>
+          </div>
+        </section>
         <section
           data-background-image="https://deboxconsulting.github.io/marketing-portfolio/videos/fullscreen/BBK-Biryani-Bucket-youtube.gif">
         </section>
+        <section data-background-color="white">
+          <div class="videos-grid">
+            <video loop controls>
+              <source src="https://deboxconsulting.github.io/marketing-portfolio/videos/Khel_Differentiates_CR.mp4"
+                type="video/mp4" />
+            </video>
+            <video loop controls>
+              <source src="https://deboxconsulting.github.io/marketing-portfolio/videos/Khel_evolution_of_Gaming_CR.mp4"
+                type="video/mp4" />
+            </video>
+            <video loop controls>
+              <source src="https://deboxconsulting.github.io/marketing-portfolio/videos/KhelGroup_Oct_CR_2.mp4"
+                type="video/mp4" />
+            </video>
+            <video loop controls>
+              <source src="https://deboxconsulting.github.io/marketing-portfolio/videos/Sparc_Sep9_Opening_Sound 2.mp4"
+                type="video/mp4" />
+            </video>
+            <video loop controls>
+              <source
+                src="https://deboxconsulting.github.io/marketing-portfolio/videos/Sparc_Sep13_membership_Creative.mp4"
+                type="video/mp4" />
+            </video>
+            <video loop controls>
+              <source
+                src="https://deboxconsulting.github.io/marketing-portfolio/videos/Sparc_Sep16_Badminton_Creative.mp4"
+                type="video/mp4" />
+            </video>
+          </div>
+        </section>
+        <section data-state="vid2"
+          data-background-video="https://deboxconsulting.github.io/marketing-portfolio/videos/fullscreen/Khel_Office_Event_CR.mp4"
+          data-background-video-loop></section>
         <section data-background-color="white">
           <div class="videos-grid">
             <video loop controls>
